--- a/pynuts/templates/create.jinja2
+++ b/pynuts/templates/create.jinja2
@@ -1,6 +1,6 @@
 <form method="post" enctype="multipart/form-data">
-  {% for column in cls.create_columns %}
-    {% set field = form[column] %}
+  {% for column in obj.create_columns %}
+    {% set field = obj.form[column] %}
     {% if not field.flags.no_label %}
       {% if field.errors %}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
