--- a/pynuts/templates/list.jinja2
+++ b/pynuts/templates/list.jinja2
@@ -1,7 +1,9 @@
 <ul>
   {% for obj in cls.query(query) %}
     <li>
-      {% if obj.view_endpoint %}
+      {% if endpoint %}
+        <a href="{{ endpoint(obj=obj) }}">
+      {% elif obj.view_endpoint %}
         <a href="{{ obj.action_url_for('view') }}">
       {% endif %}
         {{ obj.data[obj.list_column] }}
