--- a/pynuts/templates/table.jinja2
+++ b/pynuts/templates/table.jinja2
@@ -1,4 +1,4 @@
-<table border="1" cellspacing="0">
+<table>
   <tr>
     {% for column in cls.table_columns %}
       {% set field = cls.Form()[column] %}
@@ -11,7 +11,17 @@
   {% for obj in cls.query(query) %}
     <tr>
       {% for column in cls.table_columns %}
-        <td>{{ obj.data[column] }}</td>
+        <td>
+          {% if endpoint %}
+            <a href="{{ endpoint(obj=obj) }}">
+          {% elif obj.view_endpoint %}
+            <a href="{{ obj.action_url_for('view') }}">
+          {% endif %}
+          {{ obj.data[column] }}
+          {% if endpoint or obj.view_endpoint %}
+            </a>
+          {% endif %}
+        </td>
       {% endfor %}
       <td><a href="{{ obj.action_url_for('edit') }}">></a></td>
       <td><a href="{{ obj.action_url_for('delete') }}">x</a></td>
