--- a/pynuts/templates/edit_document.jinja2
+++ b/pynuts/templates/edit_document.jinja2
@@ -1,4 +1,5 @@
 <form action="" method="post">
-    <textarea name="document" cols="100" rows="20">{{ text }}</textarea>
-    <input type=submit value="Save">
+  <input type="hidden" value="{{ old_commit }}" name="_old_commit" />
+  <textarea name="document" cols="100" rows="20">{{ text }}</textarea>
+  <input type=submit value="Save">
 </form>
