Add document feature in Advanced Tutorial

--- a/doc/example/advanced/static/style.css
+++ b/doc/example/advanced/static/style.css
@@ -16,3 +16,4 @@ table, table td { border: thin solid #999; border-collapse: collapse;
                     width: 50%; text-align:center; }
 
 .error ul       { background: #F0D6D6; }
+.ok ul          { background: #80B76F; }
