--- a/pynuts/templates/table.jinja2
+++ b/pynuts/templates/table.jinja2
@@ -5,8 +5,12 @@
           {% set field = cls.Form()[column] %}
           <th>{{ field.label() }}</th>
         {% endfor %}
-        <th>Edit</th>
-        <th>Delete</th>
+        {% if cls.edit_endpoint %}
+          <th>Edit</th>
+        {% endif %}
+        {% if cls.delete_endpoint %}
+          <th>Delete</th>
+        {% endif %}
       </tr>
       
       {% for obj in cls.query(query) %}
@@ -24,8 +28,12 @@
               {% endif %}
             </td>
           {% endfor %}
-          <td><a href="{{ obj.action_url_for('edit') }}">></a></td>
+          {% if obj.edit_endpoint %}
+            <td><a href="{{ obj.action_url_for('edit') }}">></a></td>
+          {% endif %}
+          {% if obj.delete_endpoint %}
           <td><a href="{{ obj.action_url_for('delete') }}">x</a></td>
+          {% endif %}
         </tr>
       {% endfor %}
     </table>
