Fix stupid bug in document edition template

--- a/pynuts/templates/edit_document.jinja2
+++ b/pynuts/templates/edit_document.jinja2
@@ -4,5 +4,5 @@
   <textarea name="document" id="message">{{ text }}</textarea>
   <label for="message">Message</label>
   <input type="text" name="message" id="message" />
-  <input type="text" value="Save">
+  <input type="submit" value="Save">
 </form>
