--- a/doc/example/advanced/templates/employee_report.html
+++ b/doc/example/advanced/templates/employee_report.html
@@ -1,5 +1,5 @@
 {% extends "_layout.html" %}
 
 {% block main %}
-  {{ cls.view_html(employee=employee) }}
+  {{ cls.view_html(employee=employee, version=version) }}
 {% endblock main %}
