--- a/doc/example/advanced/templates/view_employee.html
+++ b/doc/example/advanced/templates/view_employee.html
@@ -6,6 +6,23 @@
   <ul>
     <li><a href="{{ url_for('edit_employee_report', **obj.primary_keys) }}">Edit the employee report</a></li>
     <li><a href="{{ url_for('html_employee', **obj.primary_keys) }}">View the employee report</a></li>
-    <li><a href="{{ url_for('download_employee', **obj.primary_keys) }}">Download as PDF</a></li>
+    <li><a href="{{ url_for('pdf_employee', **obj.primary_keys) }}">Download as PDF</a></li>
   </ul>
+  <h3>Versions</h3>
+  <table>
+    <tr>
+      <th>Commit id</th>
+      <th>Edit</th>
+      <th>HTML</th>
+      <th>PDF</th>
+    </tr>
+    {% for hist in history %}
+      <tr>
+        <td>{{ hist.datetime }}</td>
+        <td><a href="{{ url_for('edit_employee_report', version=hist.version, **obj.primary_keys) }}">></a></td>
+        <td><a href="{{ url_for('html_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
+        <td><a href="{{ url_for('pdf_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endblock main %}
