--- a/doc/example/advanced/templates/view_employee.html
+++ b/doc/example/advanced/templates/view_employee.html
@@ -18,7 +18,7 @@
     </tr>
     {% for hist in history %}
       <tr>
-        <td>{{ hist.datetime }}</td>
+        <th>{{ hist.datetime }}</th>
         <td><a href="{{ url_for('edit_employee_report', version=hist.version, **obj.primary_keys) }}">></a></td>
         <td><a href="{{ url_for('html_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
         <td><a href="{{ url_for('pdf_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
