--- a/doc/example/advanced/templates/view_employee.html
+++ b/doc/example/advanced/templates/view_employee.html
@@ -11,7 +11,8 @@
   <h3>Versions</h3>
   <table>
     <tr>
-      <th>Commit id</th>
+      <th>Commit datetime</th>
+      <th>Commit message</th>
       <th>Edit</th>
       <th>HTML</th>
       <th>PDF</th>
@@ -19,6 +20,7 @@
     {% for hist in history %}
       <tr>
         <td>{{ hist.datetime }}</td>
+        <td>{{ hist.message }}</td>
         <td><a href="{{ url_for('edit_employee_report', version=hist.version, **obj.primary_keys) }}">></a></td>
         <td><a href="{{ url_for('html_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
         <td><a href="{{ url_for('pdf_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
