--- a/doc/example/advanced/templates/view_employee.html
+++ b/doc/example/advanced/templates/view_employee.html
@@ -8,7 +8,7 @@
     <li><a href="{{ url_for('html_employee', **obj.primary_keys) }}">View the employee report</a></li>
     <li><a href="{{ url_for('pdf_employee', **obj.primary_keys) }}">Download as PDF</a></li>
   </ul>
-  <h3>Versions</h3>
+  <h2>Document history</h2>
   <table>
     <tr>
       <th>Commit datetime</th>
@@ -19,7 +19,7 @@
     </tr>
     {% for hist in history %}
       <tr>
-        <td>{{ hist.datetime }}</td>
+        <th>{{ hist.datetime }}</th>
         <td>{{ hist.message }}</td>
         <td><a href="{{ url_for('edit_employee_report', version=hist.version, **obj.primary_keys) }}">></a></td>
         <td><a href="{{ url_for('html_employee', version=hist.version, **obj.primary_keys) }}">></a></td>
