--- a/doc/example/advanced/templates/read_employee.html
+++ b/doc/example/advanced/templates/read_employee.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <h2>Employee</h2>
-  {{ obj.view_object() }}
+  {{ obj.view_read() }}
   <h2>Document history</h2>
   <table>
     <tr>
