--- a/pynuts/templates/list.jinja2
+++ b/pynuts/templates/list.jinja2
@@ -4,11 +4,11 @@
         <li>
           {% if endpoint %}
             <a href="{{ endpoint(obj=obj) }}">
-          {% elif obj.view_endpoint %}
-            <a href="{{ obj.action_url_for('view') }}">
+          {% elif obj.read_endpoint %}
+            <a href="{{ obj.action_url_for('read') }}">
           {% endif %}
           {{ obj.data[obj.list_column] }}
-          {% if endpoint or obj.view_endpoint %}
+          {% if endpoint or obj.read_endpoint %}
             </a>
           {% endif %}
         </li>
