--- a/pynuts/templates/create.jinja2
+++ b/pynuts/templates/create.jinja2
@@ -1,14 +1,14 @@
 <form method="post" enctype="multipart/form-data">
-  {% for column in obj.create_columns %}
-    {% set field = obj.form[column] %}
-    {% if not field.flags.no_label %}
+  {% for field in obj.create_form %}
+    {{1/0}}
+    {% if not field.hidden %}
       {% if field.errors %}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
       {% else %}
         {{ field.label() }}
       {% endif %}
     {% endif %}
-    {{ field() | safe }}
+    {{ field | safe }}
   {% endfor %}
   <input type="submit" />
 </form>
