--- a/pynuts/templates/update.jinja2
+++ b/pynuts/templates/update.jinja2
@@ -1,6 +1,5 @@
 <form method="post" enctype="multipart/form-data">
-  {% for column in obj.edit_columns %}
-    {% set field = obj.form[column] %}
+  {% for field in obj.update_form %}
     {% if not field.flags.no_label %}
       {% if field.errors %}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
