Example with new API

--- a/doc/example/advanced/models/index.rst.jinja2
+++ b/doc/example/advanced/models/index.rst.jinja2
@@ -1,5 +1,4 @@
-{% for column in employee.view_columns %}
-    {% set field = employee.form[column] %}
-    {{ field.label.text }}
-     {{ field.data | safe }}
+{% for field in employee.read_fields %}
+  {{ field.label.text }}
+   {{ field.data | safe }}
 {% endfor %}
