Add filters for data field representation

--- a/pynuts/templates/read.jinja2
+++ b/pynuts/templates/read.jinja2
@@ -2,7 +2,7 @@
   {% for field in obj.read_fields %}
     {% if field.widget.input_type != 'hidden' %}
       <dt>{{ field.label.text }}</dt>
-      <dd>{{ field.data | safe }}</dd>
+      <dd>{{ field | data }}</dd>
     {% endif %}
   {% endfor %}
 </dl>
