Update documentation and advanced example

--- a/doc/example/advanced/models/index.rst.jinja2
+++ b/doc/example/advanced/models/index.rst.jinja2
@@ -5,3 +5,8 @@
 {% endif %}
 
 {% endfor %}
+
+{% set path = document.type_name + "/" + document.document_id + "/" + document.version %}
+Comments:
+
+.. editable:: {{ path }}/comments
