--- a/doc/example/advanced/templates/edit_employee_template.html
+++ b/doc/example/advanced/templates/edit_employee_template.html
@@ -1,5 +1,5 @@
 {% extends "_layout.html" %}
 
 {% block main %}
-  {{ cls.view_edit(employee=employee, version=version) }}
+  {{ document.view_edit(employee=employee, version=version) }}
 {% endblock main %}
