--- a/doc/example/complete/templates/employee_report.html
+++ b/doc/example/complete/templates/employee_report.html
@@ -8,5 +8,5 @@
 {% endblock head %}
 
 {% block main %}
-  {{ document.view_html(employee=employee) }}
+  {{ document.view_html(archive=archive, employee=employee) }}
 {% endblock main %}
