--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -16,26 +16,26 @@
       </tr>
     </thead>
     <tbody>
-    {%- for obj in view_class.query(query) %}
+    {%- for view in view_class.query(query) %}
       <tr>
       {%- for column in view_class.table_columns %}
         <td>
           {%- if endpoint -%}
-            <a href="{{ endpoint(obj=obj) }}">
-          {%- elif obj.read_endpoint -%}
-            <a href="{{ obj.action_url_for('read') }}">
+            <a href="{{ endpoint(view=view) }}">
+          {%- elif view.read_endpoint -%}
+            <a href="{{ view.action_url_for('read') }}">
           {%- endif -%}
-          {{ obj.data[column] }}
-          {%- if endpoint or obj.read_endpoint -%}
+          {{ view.TableForm(obj=view.data)[column] | data }}
+          {%- if endpoint or view.read_endpoint -%}
             </a>
           {%- endif -%}
         </td>
       {%- endfor %}
-      {%- if obj.update_endpoint %}
-        <td><a href="{{ obj.action_url_for('update') }}">></a></td>
+      {%- if view.update_endpoint %}
+        <td><a href="{{ view.action_url_for('update') }}">></a></td>
       {%- endif %}
-      {%- if obj.delete_endpoint %}
-        <td><a href="{{ obj.action_url_for('delete') }}">x</a></td>
+      {%- if view.delete_endpoint %}
+        <td><a href="{{ view.action_url_for('delete') }}">x</a></td>
       {%- endif %}
       </tr>
     {%- endfor %}
