Revert "Use read_form instead of read_fields"
This reverts commit c194202eba71df5b818d53e7037a37f50ec2283c.

--- a/doc/example/complete/models/index.rst.jinja2
+++ b/doc/example/complete/models/index.rst.jinja2
@@ -5,7 +5,7 @@
 EMPLOYEE'S IDENTITY
 -------------------
 
-{% for field in employee.read_form %}
+{% for field in employee.read_fields %}
 {% if field.widget.input_type != 'hidden' %}
   {{ field.label.text }}
    {{ field.data | safe }}
