--- a/doc/example/advanced/models/index.rst.jinja2
+++ b/doc/example/advanced/models/index.rst.jinja2
@@ -1,4 +1,4 @@
-{% for field in employee.read_form %}
+{% for field in employee.read_fields %}
 {% if field.widget.input_type != 'hidden' %}
   {{ field.label.text }}
    {{ field.data | safe }}
