--- a/pynuts/templates/_pynuts/create.jinja2
+++ b/pynuts/templates/_pynuts/create.jinja2
@@ -1,4 +1,4 @@
-<form method="post" enctype="multipart/form-data">
+<form {% if action %} action="{{ action }}" {% endif %} method="post" enctype="multipart/form-data">
   {%- for field in view.create_form %}
     {%- if field.widget.input_type != 'hidden' -%}
       {%- if field.errors -%}
