--- a/pynuts/templates/_pynuts/edit_document.jinja2
+++ b/pynuts/templates/_pynuts/edit_document.jinja2
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form {% if action %} action="{{ action }}" {% endif %} method="post">
   <input type="hidden" value="{{ old_commit }}" name="_old_commit" />
   <label for="document">Content</label>
   <textarea name="document" id="message">{{ text }}</textarea>
