--- a/pynuts/templates/_pynuts/update.jinja2
+++ b/pynuts/templates/_pynuts/update.jinja2
@@ -1,6 +1,6 @@
-<form method="post" enctype="multipart/form-data">
+<form {% if action %} action="{{ action }}" {% endif %} method="post" enctype="multipart/form-data">
 {%- for field in view.update_form %}
-  {% if field.widget.input_type != 'hidden' %}
+  {%- if field.widget.input_type != 'hidden' %}
     {%- if not field.flags.no_label %}
       {%- if field.errors %}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
@@ -10,6 +10,6 @@
     {%- endif %}
   {%- endif -%}
   {{ field() | safe }}
-{% endfor %}
+{%- endfor %}
   <input type="submit" />
 </form>
