Revert list and table templates to pre-revert situation.

--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -16,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-    {%- for obj in view_class.query(query) %}
+    {%- for view in view_class.query(query) %}
       <tr>
       {%- for column in view_class.table_columns %}
         <td>
@@ -35,11 +35,11 @@
           {%- endif -%}
         </td>
       {%- endfor %}
-      {%- if obj.update_endpoint %}
-        <td><a href="{{ obj.action_url_for('update') }}">></a></td>
+      {%- if view.update_endpoint %}
+        <td><a href="{{ view.action_url_for('update') }}">></a></td>
       {%- endif %}
-      {%- if obj.delete_endpoint %}
-        <td><a href="{{ obj.action_url_for('delete') }}">x</a></td>
+      {%- if view.delete_endpoint %}
+        <td><a href="{{ view.action_url_for('delete') }}">x</a></td>
       {%- endif %}
       </tr>
     {%- endfor %}
