--- a/pynuts/templates/_pynuts/list.jinja2
+++ b/pynuts/templates/_pynuts/list.jinja2
@@ -1,18 +1,18 @@
 {% showonmatch 'ul li' %}
   <ul>
-  {%- for obj in view_class.query(query) %}
-    <li>
-    {%- if endpoint -%}
-      <a href="{{ endpoint(obj=obj) }}">
-    {%- elif obj.read_endpoint -%}
-      <a href="{{ obj.action_url_for('read') }}">
-    {%- endif -%}
-      {{ obj.data[obj.list_column] }}
-    {%- if endpoint or obj.read_endpoint -%}
-      </a>
-    {%- endif -%}
-    </li>
-  {%- endfor %}
+    {%- for view in view_class.query(query) %}
+      <li>
+        {%- if endpoint -%}
+          <a href="{{ endpoint(view=view) }}">
+        {%- elif view.read_endpoint -%}
+          <a href="{{ view.action_url_for('read') }}">
+        {%- endif -%}
+        {{ view.ListForm(obj=view.data)[view.list_column] | data }}
+        {%- if endpoint or view.read_endpoint -%}
+          </a>
+        {%- endif -%}
+      </li>
+    {%- endfor %}
   </ul>
 {%- else -%}
   {%- if no_result_message -%}
