--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -26,12 +26,12 @@
               {%- elif view.read_endpoint -%}
                 <a href="{{ view.action_url_for('read') }}">
               {%- endif -%}
-              {{ view.TableForm(obj=view.data)[column] | data }}
+              {{ view.TableForm(obj=view.data, formdata=None)[column] | data }}
               {%- if endpoint or view.read_endpoint -%}
                 </a>
               {%- endif -%}
           {%- else -%}
-            {{ view.TableForm(obj=view.data)[column] | data }}
+            {{ view.TableForm(obj=view.data, formdata=None)[column] | data }}
           {%- endif -%}
         </td>
       {%- endfor %}
