Add action in form, Fix typo in save.js and update doc

--- a/doc/example/complete/models/index.rst.jinja2
+++ b/doc/example/complete/models/index.rst.jinja2
@@ -23,4 +23,5 @@ MISC
 
    ["Employee", "Edit this !"]
 
-{{ render_rest(document.type_name, part='comments.rst.jinja2', employee=employee) }}
+{{ render_rest(document.type_name, part='comments.rst.jinja2', employee=employee, editable=editable) }}
+
