--- a/doc/example/complete/templates/create_employee.html
+++ b/doc/example/complete/templates/create_employee.html
@@ -2,5 +2,5 @@
 
 {% block main %}
   <h2>Add New Employee</h2>
-  {{ view.view_create() }}
+  {{ view.view_create(action=url_for('create_employee')) }}
 {% endblock main %}
