--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -16,7 +16,7 @@
       </tr>
     </thead>
     <tbody>
-    {%- for view in view_class.query(query) %}
+    {%- for view in views %}
       <tr>
       {%- for column in view_class.table_columns %}
         <td>
