--- a/doc/example/complete/templates/table_employees.html
+++ b/doc/example/complete/templates/table_employees.html
@@ -2,5 +2,5 @@
 
 {% block main %}
   <h2>Employees</h2>
-  {{ view_class.view_table(no_result_message='No employee found') }}
+  {{ view_class.view_table(no_result_message='No employee found', actions=actions) }}
 {% endblock main %}
