--- a/pynuts/templates/_pynuts/list.jinja2
+++ b/pynuts/templates/_pynuts/list.jinja2
@@ -3,9 +3,9 @@
     {%- for view in views  %}
       <li>
         {%- if endpoint -%}
-          <a href="{{ endpoint(view=view) }}">
+          <a href="{{ endpoint(view=view, **(ctx_args or {})) }}">
         {%- elif view.read_endpoint -%}
-          <a href="{{ view.action_url_for('read') }}">
+          <a href="{{ view.action_url_for('read', **(ctx_args or {})) }}">
         {%- endif -%}
         {{ view.ListForm(obj=view.data, formdata=None)[view.list_column] | data }}
         {%- if endpoint or view.read_endpoint -%}
