--- a/pynuts/templates/_pynuts/table.jinja2
+++ b/pynuts/templates/_pynuts/table.jinja2
@@ -27,9 +27,9 @@
         <td>
           {%- if loop.index == 1 -%}
               {%- if endpoint -%}
-                <a href="{{ endpoint(view=view) }}">
+                <a href="{{ endpoint(view=view, **(ctx_args or {})) }}">
               {%- elif view.read_endpoint -%}
-                <a href="{{ view.action_url_for('read') }}">
+                <a href="{{ view.action_url_for('read', **(ctx_args or {})) }}">
               {%- endif -%}
               {{ view.TableForm(obj=view.data, formdata=None)[column] | data }}
               {%- if endpoint or view.read_endpoint -%}
@@ -42,14 +42,15 @@
       {%- endfor %}
       {%- if not no_default_actions %}
         {%- if view.update_endpoint %}
-          <td><a href="{{ view.action_url_for('update') }}">></a></td>
+          <td><a href="{{ view.action_url_for('update', **(ctx_args or {})) }}">></a></td>
         {%- endif %}
         {%- if view.delete_endpoint %}
-          <td><a href="{{ view.action_url_for('delete') }}">x</a></td>
+          <td><a href="{{ view.action_url_for('delete', **(ctx_args or {})) }}">x</a></td>
         {%- endif %}
       {% endif %}
       {% for action in actions %}
-        <td><a href="{{ action.data.update(view.primary_keys) or url_for(action.endpoint, **action.data) }}">{{ action.label }}</a></td>
+        {# Update the dict in line with `or` hack #}
+        <td><a href="{{ action.data.update(view.primary_keys) or action.data.update(ctx_args or {}) or url_for(action.endpoint, **action.data) }}">{{ action.label }}</a></td>
       {% endfor %}
       </tr>
     {%- endfor %}
