--- a/doc/example/advanced/templates/update_employee.html
+++ b/doc/example/advanced/templates/update_employee.html
@@ -1,6 +1,6 @@
 {% extends "_layout.html" %}
 
 {% block main %}
-  <h2>Edit Employee</h2>
+  <h2>Update Employee</h2>
   {{ view.view_update() }}
 {% endblock main %}
